register user added and try to save at backend (dont work)

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
+
+  <!--style.css integration</!-->
+  <link rel="stylesheet" href="./css/style.css">
+
+  <!--script.js integration</!-->
+  <script src="./js/script.js"></script>
+
 </head>
 
 <body onload="init()">
+
+  <div>
+    <h1>Login</h1>
+  </div>
+  
+  <div>
+    <a href="register_user.html">Sign In</a>
+  </div>
+
+
+
 
 </body>
 
