Add user should now work but redirect to index.html dont work

--- a/register_user.html
+++ b/register_user.html
@@ -26,10 +26,10 @@
 
     <div>
         <form onsubmit="return addUser(event)">
-            <input type="text" name="userName" id="user-name-id" placeholder="Name" required minlength="2">
-            <input type="email" name="userEMail" id="user-e-mail-id" placeholder="E Mail" required minlength="2">
-            <input type="password" name="userPassword" id="user-password-id" placeholder="Password" required minlength="2">
-            <input type="password" name="userPasswordConfirmation" id="user-password-confirmation-id" placeholder="Password confirmation" required minlength="2">
+            <input type="text" name="addUserName" id="add-user-name-id" placeholder="Name" required minlength="2">
+            <input type="email" name="addUserEMail" id="add-user-e-mail-id" placeholder="E Mail" required minlength="2">
+            <input type="password" name="addUserPassword" id="add-user-password-id" placeholder="Password" required minlength="2">
+            <input type="password" name="addUserPasswordConfirmation" id="add-user-password-confirmation-id" placeholder="Password confirmation" required minlength="2">
             <div class="accept-policy-box" onclick="validateCheckBoxClicked()">
                 <input type="checkbox" name="acceptPolicy" id="privacy-check-ID" value="acceptPolicy" id="privacy-check-id"/>
                 <span class="accept-policy">I accept the Privacy policy</span>
