--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
     <a href="register_user.html">Sign In</a>
   </div>
 
+  <form onsubmit="login(); return false;">
+    <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" required minlength="2">
+    <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2">
+    <button>Login</button>
+  </form>
 
+  <div id="msgBox">
 
+  </div>
 
 </body>
 
