--- a/index.html
+++ b/index.html
@@ -9,41 +9,55 @@
 
   <!--style.css integration</!-->
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/register_style.css">
 
   <!--script.js integration</!-->
-  <script src="./js/script.js"></script>
-
+  <script src="./js/register.js"></script>
+  <script src="./js/template.js"></script>
 </head>
 
 <body onload="init()">
-
-  <div> <h1>Login</h1> </div>
-  
-  <form onsubmit="login(); return false;">
-    <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" required minlength="2">
-    <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2">
-    <button>Login</button>
-  </form>
-  <div id="msgBox"></div>
-  <div id="sign-up-popup-id" class="sign-up-popup-bg d-none">
-    <div class="sign-up-popup">
-      <form class="sign-up-form-style" onsubmit="return addUser(event)">
-        <h1>Sign Up</h1>
-        <input type="text" name="addUserName" id="add-user-name-id" placeholder="Name" required minlength="2">
-        <input type="email" name="addUserEMail" id="add-user-e-mail-id" placeholder="E Mail" required minlength="2">
-        <input type="password" name="addUserPassword" id="add-user-password-id" placeholder="Password" required minlength="2">
-        <input type="password" name="addUserPasswordConfirmation" id="add-user-password-confirmation-id" placeholder="Password confirmation" required minlength="2">
-        <div class="accept-policy-box" onclick="validateCheckBoxClicked()">
-            <input type="checkbox" name="acceptPolicy" id="privacy-check-ID" value="acceptPolicy" id="privacy-check-id"/>
-            <span class="accept-policy">I accept the Privacy policy</span>
-            <div id="privacy-error-message" class="error-message-register-checkbox" style="display: none;">Please accept the Privacy policy to proceed with registration.</div>
-        </div>
-        <button type="submit">Sign up</button>
-      </form>
-    </div>
+  <div class="logo">
+    <img src="./assets/img/logo.png" alt="join Logo">
   </div>
-  <div>
-    <button onclick="signUp()">Sign up</button>
+  <div class="container">
+    <div class="content">
+      <div class="form-header"> 
+        <h1>Log in</h1>
+        <div  class="line"></div>
+       </div>
+      <form class="login-container" onsubmit="register(); return false">
+        <div class="login-fields-container">
+          <div class="login-fields-gap">
+            <div class="login-input">
+              <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" required autocomplete="on">
+              <img class="login-email" src="./assets/img/mail.png" alt="">
+            </div>
+            <div class="login-input">
+              <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="6" autocomplete="current-password">
+              <img class="login-lock" src="./assets/img/lock.png" alt="">
+            </div>
+          </div>
+          <div>
+            <input type="checkbox"/>
+            <span>Remember me</span>
+          </div>
+        </div>
+        <div>
+          <button id="registerBtn">Login</button>
+          <button>Guest Log in</button>
+        </div>
+      </form>
+      <div id="sign-up-popup-id" class="sign-up-popup-bg d-none"></div>
+      <div>
+        <span>Not a Join user?</span>
+        <button onclick="signUp()">Sign up</button>
+      </div>
+      <div>
+        <a>Privacy Policy</a>
+        <a>Legal notice</a>
+      </div>
+    </div>
   </div>
 
 </body>
