async function login() added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Log in</h1>
         <div  class="line"></div>
        </div>
-      <form class="login-container" onsubmit="register(); return false">
+      <form class="login-container" onsubmit="login(); return false">
         <div class="login-fields-container">
           <div class="login-fields-gap">
             <div class="login-input">
@@ -34,7 +34,7 @@
               <img class="login-email" src="./assets/img/mail.png" alt="">
             </div>
             <div class="login-input">
-              <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="6" autocomplete="current-password">
+              <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2" autocomplete="current-password">
               <img class="login-lock" src="./assets/img/lock.png" alt="">
             </div>
           </div>
