--- a/summary.html
+++ b/summary.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <!--script.js integration</!-->
-    <script src="./js/script.js"></script>
+    <script src="./js/register.js"></script>
+    <script src="./js/template.js"></script>
 </head>
 
 <body>
