Form issue because of missing id and name at form in index.html fixed

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </div>
           </div>
           <div>
-            <input type="checkbox"/>
+            <input type="checkbox" name="loginCheckbox" id="checkbox-id"/>
             <span>Remember me</span>
           </div>
         </div>
         <div>
-          <button id="registerBtn">Login</button>
+          <button name="registerBtn" id="register-btn-id">Login</button>
           <button>Guest Log in</button>
         </div>
       </form>
