contacts.html and contacts.css and contacts.js added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
       </div>
       <div>
         <a>Privacy Policy</a>
-        <a>Legal notice</a>
+        <a>Legal notice</a>        
+      </div>
+      <div>
+        <a href="contacts.html">Contacts</a>
       </div>
     </div>
   </div>
