function renderAddContactButtonMobile and function addContactScreenMobile and function addContactFormMobileHTML and function hideHeaderAndFooter and function showHeaderAndFooter and function redirectToContacts added

--- a/contacts.html
+++ b/contacts.html
@@ -14,9 +14,11 @@
     <script src="./js/contacts.js"></script>
 </head>
 
-<body>
+<body onload="contactsInit()">
 
-    <h1>Contacts</h1>
+    <div id="contacts-content-id">
+
+    </div>
 
     
 </body>
