--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,9 @@
 <body onload="contactsInit()">
 
     <div id="contacts-content-id">
-
+        <div> 
+            <img src="./assets/img/contacts/addContactButtonMobile.svg" class="addContactImage" onclick="addContactScreenMobile()">`;
+        </div>
     </div>
 
     
