--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,49 @@
 
 <body>
     
-    <h1>Summary</h1>
+   <div class="summary-secondery">
+        <span>Good morning,</span>
+        <div></div>
+   </div>
+
+   <div>
+        <div>
+            <h1>Join 360</h1>
+            <span>Key Metrics at a Glance</span>
+        </div>
+        <div></div>
+ 
+        <div>
+            <div> 
+                <div>to-do</div>
+                <div>Done</div>
+            </div>
+            <div>
+                <div>Urgent</div>
+                <div></div>
+                <div>Upcomming deadline</div>
+            </div>
+            <div>
+
+                <div>
+                    Tasks in
+                    Board 
+                </div>
+
+                <div>
+                    Tasks In
+                    Progress 
+                </div>
+        
+                <div>
+                    Awaiting 
+                    feedback 
+                </div>
+
+            </div>
+        </div>
+   </div>
+
 
     <a href="index.html">Back</a>
 </body>
