register error  color added

--- a/add_tast.html
+++ b/add_tast.html
@@ -9,6 +9,9 @@
 
 </head>
 <body onload="init()">
+    <div>
+        <h1>Add Task</h1>
+    </div>
     <div w3-include-html="./templates/test.html"></div>
 </body>
 </html>
