contacts link moved from index to summary and function createContactMobile() + sub functions added and function renderContacts() added

--- a/contacts.html
+++ b/contacts.html
@@ -11,10 +11,12 @@
 
     <!--script.js integration</!-->
     <script src="./js/template.js"></script>
+    <script src="./js/register.js"></script>
     <script src="./js/contacts.js"></script>
+    <script src="./js/addContactMobile.js"></script>    
 </head>
 
-<body onload="contactsInit()">
+<body onload="contactsInit(); getLoggedInUser()">
 
     <div id="contacts-content-id">
         <div> 
