--- a/summary.html
+++ b/summary.html
@@ -60,6 +60,10 @@
 
 
     <a href="index.html">Back</a>
+
+    <div  style="position: absolute;">  <!-- Der Link ist nur kurzfristig hier, kommt nach der Menü Leiste wieder weg -->
+        <a href="contacts.html">Contacts</a>
+    </div>
 </body>
 
 </html>
