login functions removed from register.js to login.js and comments removed and login.js integrated in index.html and contacts.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!--script.js integration</!-->
   <script src="./js/register.js"></script>
+  <script src="./js/login.js"></script>
   <script src="./js/template.js"></script>
 </head>
 
