--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,7 @@
     <!--script.js integration</!-->
     <script src="./js/template.js"></script>
     <script src="./js/register.js"></script>
+    <script src="./js/login.js"></script>
     <script src="./js/contacts.js"></script>
     <script src="./js/addContactMobile.js"></script>    
 </head>
