--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,8 @@
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/contacts.js"></script>
-    <script src="./js/addContactMobile.js"></script>    
+    <script src="./js/addContactMobile.js"></script>
+    <script src="./js/openContactOverlayMobile.js"></script> 
 </head>
 
 <body onload="contactsInit(); getLoggedInUser()">
