Lokale Änderungen für den Merge commiten

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
             <div id="login-user-e-mail-border-id" class="login-input">
               <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" required autocomplete="on">
               <img class="login-email" src="./assets/img/mail.png" alt="">
+              <span id="invalid-email-id" class="err-msg d-none">No user found with this email.</span>
+              <span id="empty-email-id" class="err-msg d-none">Enter a valid email (e.g., user@example.com)!</span>
             </div>
+            
             <div id="login-user-password-border-id" class="login-input">
               <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2" autocomplete="current-password">
               <img class="login-lock" src="./assets/img/lock.png" alt="">
+              <span id="empty-password-id" class="err-msg d-none">This Field is required!</span>
+              <span id="invalid-password-id" class="err-msg d-none">Wrong password Ups! Try again.</span>
             </div>
           </div>
           <div class="remember-me-checkbox-container">
