--- a/contacts.html
+++ b/contacts.html
@@ -19,6 +19,7 @@
     <script src="./js/addContactMobile.js"></script>
     <script src="./js/openContactOverlayMobile.js"></script>
     <script src="./js/editContactOverlayMobile.js"></script>
+    <script src="./js/includeHTML.js"></script>
 </head>
 
 <body onload="contactsInit(); getLoggedInUser(); includeHTML()">
