--- a/add_task.html
+++ b/add_task.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/header.css">
     <script src="script.js" ></script>
+    <script src="./js/includeHTML.js"></script>
 
     <title>Document</title>
 
@@ -20,6 +21,7 @@
 
 
     <div w3-include-html="./templates/test.html"></div>
+    
     <div w3-include-html="./assets/templates/footer.html"></div>
 </body>
 </html>
