--- a/board.html
+++ b/board.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/header.css">
     <script src="script.js" ></script>
+    <script src="./js/includeHTML.js"></script>
     <title>Document</title>
 
 </head>
