--- a/summary.html
+++ b/summary.html
@@ -13,6 +13,7 @@
     <!--script.js integration</!-->
     <script src="./js/register.js"></script>
     <script src="./js/template.js"></script>
+    <script src="./js/includeHTML.js"></script>
 </head>
 
 <body onload="includeHTML()">
@@ -24,7 +25,7 @@
         <div></div>
    </div>
 
-   <div>
+   <div class="summary-content">
         <div>
             <h1>Join 360</h1>
             <span>Key Metrics at a Glance</span>
