--- a/contacts.html
+++ b/contacts.html
@@ -19,13 +19,14 @@
     <script src="./js/addContactMobile.js"></script>
     <script src="./js/openContactOverlayMobile.js"></script>
     <script src="./js/editContactOverlayMobile.js"></script>
+    <script src="./js/includeHTML.js"></script>
 </head>
 
 <body onload="contactsInit(); getLoggedInUser(); includeHTML()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
-
-    <div id="contacts-content-id">
+    
+    <div class="test" id="contacts-content-id">
         <div> 
             <img src="./assets/img/contacts/addContactButtonMobile.svg" class="addContactImage" onclick="addContactScreenMobile()">`;
         </div>
