--- a/summary.html
+++ b/summary.html
@@ -13,6 +13,7 @@
     <!--script.js integration</!-->
     <script src="./js/register.js"></script>
     <script src="./js/template.js"></script>
+    <script src="./js/includeHTML.js"></script>
 </head>
 
 <body onload="includeHTML()">
