add contakt and delete contact dont work

--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
     <script src="./js/includeHTML.js"></script>
 </head>
 
-<body onload="contactsInit(); getLoggedInUser(); includeHTML()">
+<body onload="contactsInit(); getLoggedInUser(); includeHTML();">
 
     <div w3-include-html="./assets/templates/header.html"></div>
     
