--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div id="login-pw-border-id" class="login-input">
               <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2" autocomplete="current-password">
-              <img class="login-lock" src="./assets/img/lock.png" alt="">
+              <img id="lock-id" class="login-lock" src="./assets/img/lock.png" alt="">
               <span id="empty-password-id" class="err-msg d-none">This field is required!</span>
               <span id="invalid-password-id" class="err-msg d-none">Wrong password Ups! Try again.</span>
             </div>
