user  registration to  backend works,  login work in progress

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="remember-me-checkbox-container">
-            <img id="uncheckbox-id" src="./assets/img/checkbox.svg" alt="remember me checkbox" onclick="toggleRememberMeCheckbox(event)">
+            <img id="uncheckbox-id" src="./assets/img/checkbox.svg" alt="remember me checkbox" onclick="toggleCheckbox(event)">
             <span>Remember me</span>
           </div>
         </div>
