--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="login-fields-container">
           <div class="login-fields-gap">
             <div id="login-email-border-id" class="login-input">
-              <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" required autocomplete="on">
+              <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" autocomplete="on">
               <img class="login-email" src="./assets/img/mail.png" alt="">
               <span id="invalid-email-id" class="err-msg d-none">No user found with this email.</span>
               <span id="empty-email-id" class="err-msg d-none">This field is required!</span>
@@ -43,8 +43,10 @@
             </div>
             
             <div id="login-pw-border-id" class="login-input">
-              <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" required minlength="2" autocomplete="current-password">
+              <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password"  autocomplete="current-password">
               <img id="lock-id" class="login-lock" src="./assets/img/lock.png" alt="">
+              <img id="login-pw-visibility-off-id" class="login-lock d-none" src="./assets/img/visibility_off.png" alt="" onclick="togglePwVisibility('login-user-password-id')">
+              <img id="login-pw-visibility-id" class="login-lock d-none" src="./assets/img/visibility.png" alt="" >
               <span id="empty-password-id" class="err-msg d-none">This field is required!</span>
               <span id="invalid-password-id" class="err-msg d-none">Wrong password Ups! Try again.</span>
             </div>
