contacts2.js added new start

--- a/contacts.html
+++ b/contacts.html
@@ -15,15 +15,17 @@
     <script src="./js/template.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
-    <script src="./js/contacts.js"></script>
+    <script src="./js/contacts2.js"></script>
+    <script src="./js/includeHTML.js"></script>
+    <!--
     <script src="./js/addContactMobile.js"></script>
     <script src="./js/openContactOverlayMobile.js"></script>
     <script src="./js/editContactOverlayMobile.js"></script>
-    <script src="./js/deleteEditContact.js"></script>
-    <script src="./js/includeHTML.js"></script>
+    <script src="./js/deleteEditContact.js"></script>    
+    </!-->
 </head>
 
-<body onload="contactsInit(); getLoggedInUser(); includeHTML();">
+<body onload="contactsInit(); includeHTML();">
 
     <div w3-include-html="./assets/templates/header.html"></div>
     
