--- a/contacts.html
+++ b/contacts.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="./css/header.css">
 
     <!--script.js integration</!-->
-    <script src="./js/template.js"></script>
+    <!-- <script src="./js/template.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/contacts.js"></script>
     <script src="./js/addContactMobile.js"></script>
     <script src="./js/openContactOverlayMobile.js"></script>
     <script src="./js/editContactOverlayMobile.js"></script>
-    <script src="./js/deleteEditContact.js"></script>
+    <script src="./js/deleteEditContact.js"></script> -->
     <script src="./js/includeHTML.js"></script>
 </head>
 
