--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
   <script src="./js/register.js"></script>
   <script src="./js/login.js"></script>
   <script src="./js/template.js"></script>
+
+  <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
 </head>
 
 <body onload="init()">
