--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,10 @@
 
     <div w3-include-html="./assets/templates/header.html"></div>
     
-    <div class="test" id="contacts-content-id">
+    <div class="contactsContent" id="contacts-content-id">
+        <div id="all-contacts-id" class="allContacts">
+            
+        </div>
         <div> 
             <img src="./assets/img/contacts/addContactButtonMobile.svg" class="addContactImage" onclick="addContactScreenMobile()">`;
         </div>
