--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="./js/login.js"></script>
   <script src="./js/template.js"></script>
 
+  <!--Fav icon integration</!-->
   <link
       rel="apple-touch-icon"
       sizes="180x180"
