addContactButtonMobile in contacts.html removed

--- a/contacts.html
+++ b/contacts.html
@@ -50,12 +50,8 @@
     <div w3-include-html="./assets/templates/header.html"></div>
     
     <div class="contactsContent" id="contacts-content-id">
-        <div id="all-contacts-id" class="allContacts">
-            
-        </div>
-        <div> 
-            <img src="./assets/img/contacts/addContactButtonMobile.svg" class="addContactImage" onclick="addContactScreenMobile()">`;
-        </div>
+        <div id="all-contacts-id" class="allContacts"></div>
+        <div id="one-contact-id"></div>
     </div>
 
     <div w3-include-html="./assets/templates/footer.html"></div>
