--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          </div>
         <div class="login-fields-container">
           <div class="login-fields-gap">
-            <div id="login-email-border-id" class="login-input">
+            <div id="login-email-border-id" class="input_global">
               <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" autocomplete="on">
               <img class="login-email" src="./assets/img/mail.png" alt="">
               <span id="invalid-email-id" class="err-msg d-none">No user found with this email.</span>
@@ -60,7 +60,7 @@
               <span id="this-is-no-email-id" class="err-msg d-none">Enter a valid email (e.g., user@example.com)!</span>
             </div>
             
-            <div id="login-pw-border-id" class="login-input">
+            <div id="login-pw-border-id" class="input_global">
               <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password"  autocomplete="current-password">
               <img id="lock-id" class="login-lock" src="./assets/img/lock.png" alt="">
               <img id="login-pw-visibility-off-id" class="login-lock d-none" src="./assets/img/visibility_off.png" alt="" onclick="togglePasswordVisibility(event, 'login-pw-visibility-id', 'password', 1)">
