--- a/summary.html
+++ b/summary.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/header.css">
 
     <!--script.js integration</!-->
+    <script src="./js/summary.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/template.js"></script>
     <script src="./js/includeHTML.js"></script>
@@ -62,6 +63,7 @@
             </div>
         </div>
    </div>
+   <button onclick="button()">click mich</button>
 
 
     <a href="index.html">Back</a>
