add taskt style cleaning

--- a/add_task.html
+++ b/add_task.html
@@ -46,38 +46,39 @@
             </div>
         </div>
         <div class="content-bottom-and-rigth">
-            <div class="at-date">
+            <div class="at-date input_global">
                 <label>Due date</label>
-                <input class="input_global" type="date"  max="2025-12-31" min="2024-02-27">
+                <input class="" type="date"  max="2025-12-31" min="2024-02-27">
             </div>
-            <div class="at-Prio">
+            <div class="at-Prio input_global">
                 <label>Prio</label>
+                
+            </div>
+            <div>
+                <div><span>Urgent</span><img src="" alt=""></div>
+                <div><span>Medium</span><img src="" alt=""></div>
+                <div><span>Low</span><img src="" alt=""></div>
+            </div>
+            <div class="at-Category input_global">
+                <label>Category</label>
+                <input class="" type="text"  max="2025-12-31" min="2024-02-27">
+            </div>
+            <div>
                 <div>
-                    <div><span>Urgent</span><img src="" alt=""></div>
-                    <div><span>Medium</span><img src="" alt=""></div>
-                    <div><span>Low</span><img src="" alt=""></div>
+                    Technical Task<br>
+                    User Story
                 </div>
             </div>
-            <div class="at-Category">
-                <label>Category</label>
-                <input class="input_global" type="text"  max="2025-12-31" min="2024-02-27">
-                <div>
-                    <div>
-                        Technical Task<br>
-                        User Story
-                    </div>
-                </div>
-                <div class="at-subtasks">
-                    <label>Subtasks</label>
-                    <input class="input_global" type="text"  placeholder="Add new subtask">
-                    <div>
-                        <ul>
-                            <li> Task 1</li>
-                            <li> Task 2</li>
-                            <li> Task 3</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="at-subtasks input_global">
+                <label>Subtasks</label>
+                <input class="" type="text"  placeholder="Add new subtask">
+            </div>
+            <div>
+                <ul>
+                    <li> Task 1</li>
+                    <li> Task 2</li>
+                    <li> Task 3</li>
+                </ul>
             </div>
             <div class="content-bottom-container">
                 <span>This field is required</span>
