add task style cleaning

--- a/add_task.html
+++ b/add_task.html
@@ -24,18 +24,22 @@
     
     <div class="content-container">
         <h1>Add Task</h1>
-        <div class="content-top-and-left">
+        <div class="content-top-and-left ">
             <div class="at-title">
                 <label>Title</label>
-                <input class="input_global" type="text" placeholder="Enter a title">
+                <div class="input_global">
+                    <input class="" type="text" placeholder="Enter a title">
+                </div>
             </div>
             <div class="at-description">
                 <label>Description</label>
-                <textarea class="input_global resize-none" placeholder="Enter a description"  maxlength="500"></textarea>
+                <textarea class="textarea-style" placeholder="Enter a description"  maxlength="500"></textarea>
             </div>
             <div class="at-assignedto">
                 <label>Assigned to</label>
-                <input class="input_global">
+                <div class="input_global">
+                    <input >
+                </div>
                 <div>
                     <div>
                         icon Tester 1 checkbock<br>
@@ -46,22 +50,25 @@
             </div>
         </div>
         <div class="content-bottom-and-rigth">
-            <div class="at-date input_global">
+            <div class="at-date ">
                 <label>Due date</label>
-                <input class="" type="date"  max="2025-12-31" min="2024-02-27">
+                <div class="input_global">
+                    <input type="date"  max="2025-12-31" min="2024-02-27">
+                </div>
             </div>
-            <div class="at-Prio input_global">
+            <div class="at-Prio ">
                 <label>Prio</label>
-                
             </div>
             <div>
                 <div><span>Urgent</span><img src="" alt=""></div>
                 <div><span>Medium</span><img src="" alt=""></div>
                 <div><span>Low</span><img src="" alt=""></div>
             </div>
-            <div class="at-Category input_global">
+            <div class="at-Category ">
                 <label>Category</label>
-                <input class="" type="text"  max="2025-12-31" min="2024-02-27">
+                <div class="input_global">
+                    <input type="text" placeholder="Select task category">
+                </div>
             </div>
             <div>
                 <div>
@@ -69,9 +76,11 @@
                     User Story
                 </div>
             </div>
-            <div class="at-subtasks input_global">
+            <div class="at-subtasks ">
                 <label>Subtasks</label>
-                <input class="" type="text"  placeholder="Add new subtask">
+                <div class="input_global">
+                    <input  type="text"  placeholder="Add new subtask">
+                </div>
             </div>
             <div>
                 <ul>
