added  assigned to toggling, but still WOP

--- a/add_task.html
+++ b/add_task.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/add_task.css">
     <script src="./js/add_task.js" ></script>
     <script src="./js/register.js" ></script>
+    <script src="./js/template.js" ></script>
     <script src="./js/includeHTML.js"></script>
 
     <title>Document</title>
@@ -27,8 +28,8 @@
         <div class="content-top-and-left ">
             <div class="at-title">
                 <label>Title</label>
-                <div class="input_global">
-                    <input class="" type="text" placeholder="Enter a title">
+                <div class="input_global  input_at">
+                    <input  type="text" placeholder="Enter a title">
                 </div>
             </div>
             <div class="at-description">
@@ -37,23 +38,20 @@
             </div>
             <div class="at-assignedto">
                 <label>Assigned to</label>
-                <div class="input_global">
-                    <input >
+                <div class="input_global input_at">
+                    <input placeholder="Select contacts to assign">
+                    <img id="rotate-arrow-id" class="rotate-arrow" src="./assets/svg/arrow_drop_down.svg" onclick="toggleAssignedToContainer()" >
                 </div>
-                <div>
-                    <div>
-                        icon Tester 1 checkbock<br>
-                        icon Tester 2 checkbock...
-                    </div>
-                </div>
+                <div id="Assigned-to-contacts-id" class=""></div>
+                
                 <div>added assigned icons here</div>
             </div>
         </div>
         <div class="content-bottom-and-rigth">
             <div class="at-date ">
                 <label>Due date</label>
-                <div class="input_global">
-                    <input type="date"  max="2025-12-31" min="2024-02-27">
+                <div class="input_global input_at">
+                    <input  type="date"  max="2025-12-31" min="2024-02-27">
                 </div>
             </div>
             <div class="at-Prio ">
@@ -66,8 +64,8 @@
             </div>
             <div class="at-Category ">
                 <label>Category</label>
-                <div class="input_global">
-                    <input type="text" placeholder="Select task category">
+                <div class="input_global input_at">
+                    <input  type="text" placeholder="Select task category">
                 </div>
             </div>
             <div>
@@ -78,7 +76,7 @@
             </div>
             <div class="at-subtasks ">
                 <label>Subtasks</label>
-                <div class="input_global">
+                <div class="input_global input_at">
                     <input  type="text"  placeholder="Add new subtask">
                 </div>
             </div>
